feature: clock endpoint
